test/cli/test/scale-subresource/kyverno-test.yaml
name: enforce-replicas-for-scale-subresource
policies:
- enforce-replicas-for-scale-subresource.yml
resources:
- resource.yaml
results:
- kind: Scale
  namespace: default
  policy: enforce-replicas-for-scale-subresource
  resources:
  - nginx-test
  result: fail
  rule: validate-nginx-test
variables: values.yaml
