test/cli/test/scale-subresource/resource.yaml
kind: Scale
apiVersion: autoscaling/v1
metadata:
  name: nginx-test
  namespace: default
spec:
  replicas: 4
