test/cli/test/scale-subresource/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
subresources:
- parentResource:
    group: apps
    kind: Deployment
    name: deployments
    namespaced: false
    singularName: ""
    verbs: null
    version: v1
  subresource:
    group: autoscaling
    kind: Scale
    name: deployments/scale
    namespaced: false
    singularName: ""
    verbs: null
    version: v1
